--- a/fair_hpo_smac/requirements.txt
+++ b/fair_hpo_smac/requirements.txt
@@ -2,6 +2,7 @@ black>=21.8b0
 isort>=5.9.3
 jupyterlab>=3.1.10
 jupyterlab-code-formatter>=1.4.10
+matplotlib>=3.4.3
 numpy>=1.21.2
 smac>=1.0.1
 torch>=1.9.0+cu111
