--- a/fair_hpo_smac/requirements.txt
+++ b/fair_hpo_smac/requirements.txt
@@ -5,6 +5,7 @@ jupyterlab-code-formatter>=1.4.10
 jupyterlab-vim>=0.14.2
 matplotlib>=3.4.3
 numpy>=1.21.2
+scikit-learn>=0.24.2
 smac>=1.0.1
 torch>=1.9.0+cu111
 torchvision>=0.10.0+cu111
