--- a/fair_hpo_smac/requirements.txt
+++ b/fair_hpo_smac/requirements.txt
@@ -1,12 +1,14 @@
 black>=21.8b0
 isort>=5.9.3
-jupyterlab>=3.1.10
 jupyterlab-code-formatter>=1.4.10
 jupyterlab-vim>=0.14.2
+jupyterlab>=3.1.10
 matplotlib>=3.4.3
 numpy>=1.21.2
 scikit-learn>=0.24.2
 smac>=1.0.1
+torch-fidelity>=0.3.0
 torch>=1.9.0+cu111
+torchmetrics>=0.5.1
 torchvision>=0.10.0+cu111
 tqdm>=4.62.2
