--- a/fair_hpo_smac/requirements.txt
+++ b/fair_hpo_smac/requirements.txt
@@ -10,7 +10,7 @@ piq>=0.6.0
 scikit-learn>=1.0
 seaborn>=0.11.2
 smac>=1.0.1
-torch>=1.9.1+cu111
-torchvision>=0.10.1+cu111
+torch>=1.10.0
+torchvision>=0.11.1
 tqdm>=4.62.3
 umap-learn>=0.5.1
