--- a/fair_hpo_smac/requirements.txt
+++ b/fair_hpo_smac/requirements.txt
@@ -1,16 +1,15 @@
 black>=21.9b0
 isort>=5.9.3
+ipywidgets>=7.6.5
 jupyterlab-code-formatter>=1.4.10
 jupyterlab-vim>=0.14.5
 jupyterlab>=3.2.0
 matplotlib>=3.4.3
 mat73>=0.52
 numpy>=1.20.3
-piq>=0.6.0
 scikit-learn>=1.0
 seaborn>=0.11.2
 smac>=1.0.1
 torch>=1.10.0
 torchvision>=0.11.1
 tqdm>=4.62.3
-umap-learn>=0.5.1
