Refactored SlimCNN model forward function
Former-commit-id: 63e85c6487fd4059b7e4be4dbcd03206351f0b55 [formerly e3359b50fe3673e2f78646092832c4db5801cecd]
Former-commit-id: c5b3cfa5bde4c3f1358c8668f72da8dd9486567c

--- a/fair_attribute_prediction/requirements.txt
+++ b/fair_attribute_prediction/requirements.txt
@@ -1,11 +1,12 @@
-black>=21.9b0
-isort>=5.10.1
+black>=21.12b0
+comet-ml>=3.23.0
 ipywidgets>=7.6.5
+isort>=5.10.1
+jupyterlab>=3.2.5
 jupyterlab-code-formatter>=1.4.10
 jupyterlab-vim>=0.14.5
-jupyterlab>=3.2.5
-matplotlib>=3.5.1
 mat73>=0.55
+matplotlib>=3.5.1
 numpy>=1.20.3
 scikit-learn>=1.0.1
 torch>=1.10.0
