Added calibration plot generation
Former-commit-id: 2a090b02a1f150df14549032da251581e2316fc6 [formerly 39689198a805a36f6b00774c8140233ccd4b5c98]
Former-commit-id: 5fdfb2a54a6428b229dbc7925b8ba599b62c99e5

--- a/fair_attribute_prediction/.gitignore
+++ b/fair_attribute_prediction/.gitignore
@@ -137,7 +137,10 @@ slurm-*.out
 # directory links
 datasets
 experiments
-figures
+
+# figure data
+figures/*.json
+figures/*.png
 
 # Comet ML
 .comet.config
