Changed folder structure
Former-commit-id: 0edf19b8e149975b985f9ddab2c18c5254ba71aa [formerly fde46c68b2cba00031f83b28ccac84e0e41eabf1]
Former-commit-id: 2a74d707c978261615e0899b0c12bcc12926be26

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+__pycache__
 *.py[cod]
 *$py.class
 
@@ -138,8 +138,11 @@ slurm-*.out
 datasets
 experiments
 
-# figure data
-figures/data
+# figure scripts
+figures
+
+# job scripts
+jobs
 
 # Comet ML
 .comet.config
